plugin basics working

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,13 @@
   <h1>Set Profile Prefix</h1>
   <input type="text" id="prefix" placeholder="Enter prefix" />
   <button id="savePrefix">Save</button>
+  
+  <p id="ipDisplay"></p>
+  <div id="errorDisplay" style="color: red;"></div>
+
+  <h2>Logs</h2>
+  <div id="logDisplay"></div> <!-- Logs will be displayed here -->
+
   <script src="../dist/popup.js"></script>
 </body>
 </html>
