more functionalities already working trying new things

--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,26 @@
   <title>Set Profile Prefix</title>
 </head>
 <body>
-  <h1>Set Profile Prefix</h1>
-  <input type="text" id="prefix" placeholder="Enter prefix" />
-  <button id="savePrefix">Save</button>
+  <!-- <h1>Set Profile Prefix</h1> -->
+   <!-- Prefix A -->
+   <label for="prefixA">Prefix A:</label>
+   <input type="text" id="prefixA" placeholder="Enter prefix A" />
+   <button id="savePrefixA">Save Prefix A</button>
+ 
+   <!-- Prefix B with state -->
+   <label for="prefixB">Prefix B (State):</label>
+   <input type="text" id="prefixB" placeholder="Enter prefix B" />
+   <button id="toggleStateB">Toggle State B</button>
+   <span id="stateBDisplay">State: F</span>
+ 
+   <!-- Prefix C with state -->
+   <label for="prefixC">Prefix C (State):</label>
+   <input type="text" id="prefixC" placeholder="Enter prefix C" />
+   <button id="toggleStateC">Toggle State C</button>
+   <span id="stateCDisplay">State: F</span>
+   <button id="sendButton">Send</button>
+   <!-- <input type="text" id="prefix" placeholder="Enter prefix" />
+  <button id="savePrefix">Save</button> -->
   
   <p id="ipDisplay"></p>
   <div id="errorDisplay" style="color: red;"></div>
